[package]
name = "time-to-topple"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.3.0"
bevy = "0.16"
bevy-egui-kbgp = "0.24.0"
bevy-tnua = "0.24.0"
bevy-tnua-avian2d = "0.5.0"
bevy-yoleck = { version = "0.26.0", features = ["vpeol_3d"] }
bevy_egui = "0.34.1"
bevy_pkv = "0.13.0"
bevy_skein = "0.2.1"
clap = { version = "4.5.39", features = ["derive"] }
dolly = "0.6.0"
egui = "0.31.1"

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
